--- a/style.css
+++ b/style.css
@@ -2,33 +2,33 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #004a3c;
 }
 
 header {
-    background-color: #333;
+    background-color: pink;
     color: #fff;
     padding: 10px;
     text-align: center;
 }
 
 nav {
-    background-color: #444;
+    background-color: #004a3c;
     overflow: hidden;
 }
 
 nav a {
     float: left;
     display: block;
-    color: white;
+    color: pink;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
 nav a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: transparent;
+    color: maroon;
 }
 
 section {
