--- a/storyline/style.css
+++ b/storyline/style.css
@@ -29,7 +29,7 @@
 
 body {
     max-width: 1200px;
-    background: #2e364a;
+    background: darkslategrey;
     margin: auto;
     padding: 20px;
 }
