--- a/storyline/style.css
+++ b/storyline/style.css
@@ -7,21 +7,21 @@
 
 .header {
     font-size: 30px;
-    color: #fff;
+    color: black;
     text-align: center;
     margin: 30px 8px;
 }
 
 .header a {
     font-size: 15px;
-    color: #fff;
+    color: black;
     text-align: center;
     margin: 10px 8px;
 }
 
 .header p {
     font-size: 10px;
-    color: #fff;
+    color: black;
     text-align: center;
     margin: 10px 8px;
 
@@ -29,7 +29,7 @@
 
 body {
     max-width: 1200px;
-    background: darkslategrey;
+    background: bisque;
     margin: auto;
     padding: 20px;
 }
@@ -51,7 +51,7 @@ body {
 
 .text-box {
     padding: 20px 30px;
-    background: #fff;
+    background: whitesmoke;
     position: relative;
     border-radius: 6px;
     font-size: 15px;
