--- a/storiesasnetwork/style.css
+++ b/storiesasnetwork/style.css
@@ -1,23 +1,69 @@
 body {
-  margin: 0;
-  overflow: hidden; /* Prevents scrollbars due to absolute positioning */
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial', sans-serif;
+    overflow: hidden;
 }
 
-.bubble {
-  position: absolute;
-  background-color: #3498db;
-  border-radius: 50%;
-  cursor: pointer;
-  transition: transform 0.3s ease-in-out;
+.black-half {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: darkgrey;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
 }
 
-.bubble-content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
+.white-half {
+    position: absolute;
+    top: 100vh;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #fff;
+    color: darkgray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
 }
 
-.bubble:hover {
-  transform: scale(1.5); /* Make the bubble 1.5 times larger on hover */
+.centered-content {
+    text-align: center;
+}
+
+.scroll-down-arrows {
+    margin-top: 20px;
+}
+
+.scroll-down-arrows i {
+    display: block;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 20px solid #fff;
+    margin: 0 auto;
+    animation: bounce 1s infinite;
+    cursor: pointer;
+}
+
+.next-button {
+    display: inline-block;
+    padding: 5px 15px; 
+    background-color: grey;
+    color: #fff;
+    text-decoration: none;
+    transition: background-color 0.3s, color 0.3s;
+    margin-top: 20px; 
+}
+
+.next-button:hover {
+    background-color: darkgrey;
+    color: #fff;
 }
