--- a/storiesasnetwork/page3/style.css
+++ b/storiesasnetwork/page3/style.css
@@ -1,9 +1,8 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #fff;
-    color: #333; /* Dark grey text color */
-    font-family: 'Arial', sans-serif;
+    color: #080808;
+
 }
 
 .content {
@@ -19,7 +18,17 @@ body {
     cursor: pointer;
     text-decoration: none; /* Remove default link underline */
 }
-
+.B-arrow-container {
+    position: fixed;
+    bottom: 40px;
+    /* Increase the distance from the bottom */
+    left: 40px;
+    /* Increase the distance from the right */
+    cursor: pointer;
+    text-decoration: none;
+    transform: rotate(180deg);
+}
 .arrow {
     font-size: 36px;
+    color: #080808;
 }
