--- a/ElasticCollection/style.css
+++ b/ElasticCollection/style.css
@@ -39,7 +39,7 @@ html {
   max-width: 50%;
   transition: transform 0.45s ease-in-out;
 
-  animation: shake 2s ease-in-out infinite;
+  animation: shake 1.5s ease-in-out infinite;
   animation-delay: 3s;
 }
 
@@ -101,13 +101,19 @@ html {
   padding-bottom: 0px;
 }
 
+
+
 .modal {
+  display: none;
+  z-index: 9999;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -128,13 +134,43 @@ html {
   align-items: center;
 }
 
+.close {
+  color: #fff;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#modalImg {
+  width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+}
+
+
+
+
+
+
+
+
+
 .modal-img {
   width: 100%;
   /* Ensure image takes full width of the modal content */
   height: auto;
 }
 
+
 .close-button {
+  color: #181818;
   position: absolute;
   top: 10px;
   right: 20px;
