--- a/ElasticCollection/style.css
+++ b/ElasticCollection/style.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,600&display=swap');
+
+.fontstyle {
+font-family: 'Bodoni Moda', serif;
+}
+
+.font-style {
+font-weight: 500;
+color: darkgreen;
+letter-spacing: 1.5px;
+line-height: 1.75;
+word-spacing: 8px;
+}
+
 a,
 a:hover,
 a:focus,
@@ -153,14 +168,6 @@ html {
   height: auto;
   margin-bottom: 20px;
 }
-
-
-
-
-
-
-
-
 
 .modal-img {
   width: 100%;
